fix: reducing stencil height on mobile to allow to load without scrolling

--- a/src/components/page-sections/Landing/style.css
+++ b/src/components/page-sections/Landing/style.css
@@ -4,12 +4,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: calc(100vh - 5rem);
 }
 
 #landing-stencil {
   position: relative;
   width: 100%;
-  height: calc(100vh - 5rem);
+  height: 90%;
   top: 5rem;
 }
 
@@ -25,5 +26,6 @@
 @media screen and (max-width: 800px) {
   #landing-stencil {
     top: -5vh;
+    height: 70%;
   }
 }
